# lazymc-docker-proxy

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/: FUNDING.yml
.github/actions/docker/: action.yml
.github/workflows/: push.yml  tag.yml
docs/: configuration.md  setup.md  troubleshooting.md
src/: machine.rs  main.rs
src/command/: mod.rs
src/entrypoint/: config.rs  mod.rs
