[package]
name = "lazymc-docker-proxy"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.12.3"
serde = "1.0.228"
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.1.0"
version-compare = "0.2.1"

# GPIO support — only compiled when targeting ARM (Raspberry Pi)
[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
rppal = "0.17"
